--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "title": "One Page Wonder",
-  "name": "startbootstrap-one-page-wonder",
+  "title": "Business Frontpage",
+  "name": "startbootstrap-business-frontpage",
   "version": "4.0.0-beta.2",
-  "description": "A one page HTML template built with Bootstrap",
+  "description": "A simple business HTML landing page built with Bootstrap",
   "keywords": [
     "css",
     "sass",
@@ -11,9 +11,9 @@
     "theme",
     "template"
   ],
-  "homepage": "https://startbootstrap.com/template-overviews/one-page-wonder",
+  "homepage": "https://startbootstrap.com/template-overviews/business-frontpage",
   "bugs": {
-    "url": "https://github.com/BlackrockDigital/startbootstrap-one-page-wonder/issues",
+    "url": "https://github.com/BlackrockDigital/startbootstrap-business-frontpage/issues",
     "email": "feedback@startbootstrap.com"
   },
   "license": "MIT",
@@ -23,7 +23,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/BlackrockDigital/startbootstrap-one-page-wonder.git"
+    "url": "https://github.com/BlackrockDigital/startbootstrap-business-frontpage.git"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
